Created chutney and potato masala recipes.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/dosa.html">Dosa recipe</a>
-
-    <img src="./images/dosa.jpg"
-    
+    <ul>
+        <li><a href="./recipes/dosa.html">Dosa recipe</a></li>
+        <li><a href="./recipes/chutney.html">Coconut chutney recipe</a></li>
+        <li><a href="./recipes/potato_masala.html">Potato masasla recipe</a></li>
+    </ul>
+  
 </body>
 </html>
