--- a/recipes/dosa.html
+++ b/recipes/dosa.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Dosa recipe</h1>
 
-    <img src="./images/dosa.jpg" alt="Image of a dosa">
+    <img src="../images/dosa.jpg" alt="Image of a dosa">
 
     <h2>Description</h2>
     <p>Dosa is a popular south Indian pancake-shaped breakfast dish. It is made with a fermented lentils and rice batter. Dosas are usually thin and crispy, and are served with <em>chutney</em> or <em>sambar</em>.</p>
